cmake_minimum_required(VERSION 3.16)
project(work)

set(CMAKE_CXX_STANDARD 14)
include_directories(Drivers/BSP/Components/at24cxx)
include_directories(Drivers/BSP/Components/w25qxx)
include_directories(Drivers/BSP/variant)
include_directories(Drivers/CMSIS/Device/ST/STM32F1xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32F10x_StdPeriph_Driver/inc)
include_directories(Drivers/STM32F1xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F1xx_HAL_Driver/Inc/Legacy)
include_directories(Inc)
include_directories(Middlewares/arduino/stm32/cores/arduino)
include_directories(Middlewares/arduino/stm32/cores/arduino/avr)
include_directories(Middlewares/arduino/stm32/cores/arduino/USB)
include_directories(Middlewares/GUI)
include_directories(Middlewares/Third_Party/FatFs/src)
include_directories(Middlewares/Third_Party/FatFs/src/drivers)
include_directories(Middlewares/Third_Party/Marlin)
include_directories(Src)
include_directories(User/ui)
include_directories(User/ui/Multi_language)
include_directories(User/ui/QRENCODE)
include_directories(User/ui/widgets)
include_directories(User/ui/widgets/config)
include_directories(User/ui/widgets/dialog)

add_executable(work
        Drivers/BSP/Components/at24cxx/at24cxx.cpp
        Drivers/BSP/Components/at24cxx/at24cxx.h
        Drivers/BSP/Components/w25qxx/spi_flash.c
        Drivers/BSP/Components/w25qxx/spi_flash.h
        Drivers/BSP/Components/w25qxx/w25qxx.c
        Drivers/BSP/Components/w25qxx/w25qxx.h
        Drivers/BSP/variant/fastio_Lite.h
        Drivers/BSP/variant/fastio_Robin.h
        Drivers/BSP/variant/fastio_Robin2.h
        Drivers/BSP/variant/fastio_RobinNano.h
        Drivers/BSP/variant/fastio_RobinPro.h
        Drivers/BSP/variant/mks_fastio.h
        Drivers/BSP/variant/mks_variant.c
        Drivers/BSP/variant/mks_variant.h
        Drivers/BSP/variant/sys.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xe.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/system_stm32f1xx.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/system_stm32f1xx.c
        Drivers/CMSIS/Include/arm_common_tables.h
        Drivers/CMSIS/Include/arm_const_structs.h
        Drivers/CMSIS/Include/arm_math.h
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armcc_V6.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_cmFunc.h
        Drivers/CMSIS/Include/core_cmInstr.h
        Drivers/CMSIS/Include/core_cmSimd.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/misc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_adc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_bkp.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_can.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_cec.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_crc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dac.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dbgmcu.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dma.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_exti.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_flash.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_fsmc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_gpio.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_i2c.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_iwdg.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_pwr.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_rcc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_rtc.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_sdio.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_spi.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_tim.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_usart.h
        Drivers/STM32F10x_StdPeriph_Driver/inc/stm32f10x_wwdg.h
        Drivers/STM32F10x_StdPeriph_Driver/src/misc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_adc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_bkp.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_can.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_cec.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_crc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_dac.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_dbgmcu.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_dma.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_exti.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_flash.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_fsmc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_i2c.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_iwdg.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_pwr.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_rtc.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_sdio.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_spi.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c
        Drivers/STM32F10x_StdPeriph_Driver/src/stm32f10x_wwdg.c
        Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_cortex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_i2c.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_iwdg.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_pwr.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rtc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rtc_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_sd.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_spi.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_sram.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_uart.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_usart.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_fsmc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_sdmmc.h
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_i2c.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_iwdg.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_sd.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_spi.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_spi_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_sram.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_usart.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_ll_fsmc.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_ll_sdmmc.c
        Inc/adc.h
        Inc/bsp_driver_sd.h
        Inc/dma.h
        Inc/fatfs.h
        Inc/ffconf.h
        Inc/fontLib.h
        Inc/fsmc.h
        Inc/gpio.h
        Inc/gpio_lite.h
        Inc/gpio_Robin.h
        Inc/gpio_Robin2.h
        Inc/gpio_Robin_nano.h
        Inc/gpio_RobinMini.h
        Inc/gpio_RobinPro.h
        Inc/i2c.h
        Inc/ili9320.h
        Inc/ili9320_font.h
        Inc/main.h
        Inc/main_Robin.h
        Inc/main_Robin2.h
        Inc/main_RobinMini.h
        Inc/main_RobinNano.h
        Inc/main_RobinPro.h
        Inc/mks_cfg.h
        Inc/mks_reprint.h
        Inc/mks_touch_screen.h
        Inc/pic.h
        Inc/pic_manager.h
        Inc/rtc.h
        Inc/sdio.h
		Src/sh_tools.h
        Inc/spi.h
        Inc/stm32f1xx_hal_conf.h
        Inc/stm32f1xx_it.h
        Inc/string_deal.h
        Inc/tim.h
        Inc/type_define.h
        Inc/usart.h
        Inc/usb_host.h
        Inc/usbh_conf.h
        Inc/wifi_module.h
        Inc/wifi_upload.h
        Middlewares/arduino/stm32/cores/arduino/avr/dtostrf.c
        Middlewares/arduino/stm32/cores/arduino/avr/dtostrf.h
        Middlewares/arduino/stm32/cores/arduino/avr/interrupt.h
        Middlewares/arduino/stm32/cores/arduino/avr/pgmspace.h
        Middlewares/arduino/stm32/cores/arduino/USB/CDC.cpp
        Middlewares/arduino/stm32/cores/arduino/USB/HID.cpp
        Middlewares/arduino/stm32/cores/arduino/USB/USBAPI.h
        Middlewares/arduino/stm32/cores/arduino/USB/USBCore.cpp
        Middlewares/arduino/stm32/cores/arduino/USB/USBCore.h
        Middlewares/arduino/stm32/cores/arduino/USB/USBDesc.h
        Middlewares/arduino/stm32/cores/arduino/Arduino.h
        Middlewares/arduino/stm32/cores/arduino/binary.h
        Middlewares/arduino/stm32/cores/arduino/Client.h
        Middlewares/arduino/stm32/cores/arduino/cortex_handlers.c
        Middlewares/arduino/stm32/cores/arduino/cxxabi-compat.cpp
        Middlewares/arduino/stm32/cores/arduino/HardwareSerial.h
        Middlewares/arduino/stm32/cores/arduino/HardwareTimer.cpp
        Middlewares/arduino/stm32/cores/arduino/HardwareTimer.h
        Middlewares/arduino/stm32/cores/arduino/HardwareTimer_static.h
        Middlewares/arduino/stm32/cores/arduino/hooks.c
        Middlewares/arduino/stm32/cores/arduino/iar_calls_sam3.c
        Middlewares/arduino/stm32/cores/arduino/IPAddress.cpp
        Middlewares/arduino/stm32/cores/arduino/IPAddress.h
        Middlewares/arduino/stm32/cores/arduino/itoa.c
        Middlewares/arduino/stm32/cores/arduino/itoa.h
        Middlewares/arduino/stm32/cores/arduino/pins_arduino.h
        Middlewares/arduino/stm32/cores/arduino/Print.cpp
        Middlewares/arduino/stm32/cores/arduino/Print.h
        Middlewares/arduino/stm32/cores/arduino/Printable.h
        Middlewares/arduino/stm32/cores/arduino/Reset.cpp
        Middlewares/arduino/stm32/cores/arduino/Reset.h
        Middlewares/arduino/stm32/cores/arduino/RingBuffer.cpp
        Middlewares/arduino/stm32/cores/arduino/RingBuffer.h
        Middlewares/arduino/stm32/cores/arduino/Server.h
        Middlewares/arduino/stm32/cores/arduino/Stream.cpp
        Middlewares/arduino/stm32/cores/arduino/Stream.h
        Middlewares/arduino/stm32/cores/arduino/syscalls.h
        Middlewares/arduino/stm32/cores/arduino/syscalls_stm32.c
        Middlewares/arduino/stm32/cores/arduino/Tone.h
        Middlewares/arduino/stm32/cores/arduino/UARTClass.cpp
        Middlewares/arduino/stm32/cores/arduino/UARTClass.h
        Middlewares/arduino/stm32/cores/arduino/Udp.h
        Middlewares/arduino/stm32/cores/arduino/USARTClass.cpp
        Middlewares/arduino/stm32/cores/arduino/USARTClass.h
        Middlewares/arduino/stm32/cores/arduino/variant.cpp
        Middlewares/arduino/stm32/cores/arduino/variant.h
        Middlewares/arduino/stm32/cores/arduino/WCharacter.h
        Middlewares/arduino/stm32/cores/arduino/WInterrupts.c
        Middlewares/arduino/stm32/cores/arduino/WInterrupts.h
        Middlewares/arduino/stm32/cores/arduino/wiring.c
        Middlewares/arduino/stm32/cores/arduino/wiring.h
        Middlewares/arduino/stm32/cores/arduino/wiring_analog.c
        Middlewares/arduino/stm32/cores/arduino/wiring_analog.h
        Middlewares/arduino/stm32/cores/arduino/wiring_constants.h
        Middlewares/arduino/stm32/cores/arduino/wiring_digital.c
        Middlewares/arduino/stm32/cores/arduino/wiring_digital.h
        Middlewares/arduino/stm32/cores/arduino/wiring_private.h
        Middlewares/arduino/stm32/cores/arduino/wiring_pulse.cpp
        Middlewares/arduino/stm32/cores/arduino/wiring_pulse.h
        Middlewares/arduino/stm32/cores/arduino/wiring_shift.c
        Middlewares/arduino/stm32/cores/arduino/wiring_shift.h
        Middlewares/arduino/stm32/cores/arduino/WMath.cpp
        Middlewares/arduino/stm32/cores/arduino/WMath.h
        Middlewares/arduino/stm32/cores/arduino/WString.cpp
        Middlewares/arduino/stm32/cores/arduino/WString.h
        Middlewares/GUI/BUTTON.h
        Middlewares/GUI/BUTTON_Private.h
        Middlewares/GUI/CHECKBOX.h
        Middlewares/GUI/CHECKBOX_Private.h
        Middlewares/GUI/DIALOG.h
        Middlewares/GUI/DIALOG_Intern.h
        Middlewares/GUI/DROPDOWN.h
        Middlewares/GUI/DROPDOWN_Private.h
        Middlewares/GUI/EDIT.h
        Middlewares/GUI/EDIT_Private.h
        Middlewares/GUI/FRAMEWIN.h
        Middlewares/GUI/FRAMEWIN_Private.h
        Middlewares/GUI/GUI.h
        Middlewares/GUI/GUI_ARRAY.h
        Middlewares/GUI/GUI_ConfDefaults.h
        Middlewares/GUI/GUI_FontIntern.h
        Middlewares/GUI/GUI_HOOK.h
        Middlewares/GUI/GUI_Private.h
        Middlewares/GUI/GUI_Protected.h
        Middlewares/GUI/GUI_VNC.h
        Middlewares/GUI/GUI_X.h
        Middlewares/GUI/GUIConf.h
        Middlewares/GUI/GUIDebug.h
        Middlewares/GUI/GUIDEMO.h
        Middlewares/GUI/GUITouchConf.h
        Middlewares/GUI/GUIType.h
        Middlewares/GUI/GUIVersion.h
        Middlewares/GUI/HEADER.h
        Middlewares/GUI/HEADER_Private.h
        Middlewares/GUI/HzLib_65k.h
        Middlewares/GUI/LCD.h
        Middlewares/GUI/LCD_ConfDefaults.h
        Middlewares/GUI/LCD_IncludeDriver.h
        Middlewares/GUI/LCD_Private.h
        Middlewares/GUI/LCD_Protected.h
        Middlewares/GUI/LCDConf.h
        Middlewares/GUI/LCDSIM.h
        Middlewares/GUI/LISTBOX.h
        Middlewares/GUI/LISTBOX_Private.h
        Middlewares/GUI/LISTVIEW.h
        Middlewares/GUI/LISTVIEW_Private.h
        Middlewares/GUI/Map.h
        Middlewares/GUI/MENU.h
        Middlewares/GUI/MENU_Private.h
        Middlewares/GUI/MESSAGEBOX.h
        Middlewares/GUI/MULTIEDIT.h
        Middlewares/GUI/MULTIPAGE.h
        Middlewares/GUI/MULTIPAGE_Private.h
        Middlewares/GUI/PROGBAR.h
        Middlewares/GUI/RADIO.h
        Middlewares/GUI/RADIO_Private.h
        Middlewares/GUI/SCROLLBAR.h
        Middlewares/GUI/SCROLLBAR_Private.h
        Middlewares/GUI/SLIDER.h
        Middlewares/GUI/TEXT.h
        Middlewares/GUI/TEXT_Private.h
        Middlewares/GUI/WIDGET.h
        Middlewares/GUI/WINDOW_Private.h
        Middlewares/GUI/WM.h
        Middlewares/GUI/WM_GUI.h
        Middlewares/GUI/WM_Intern.h
        Middlewares/GUI/WM_Intern_ConfDep.h
        Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.c
        Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.h
        Middlewares/Third_Party/FatFs/src/drivers/usbh_diskio.c
        Middlewares/Third_Party/FatFs/src/drivers/usbh_diskio.h
        Middlewares/Third_Party/FatFs/src/option/cc936.c
        Middlewares/Third_Party/FatFs/src/option/ccsbcs.c
        Middlewares/Third_Party/FatFs/src/option/mycc936.c
        Middlewares/Third_Party/FatFs/src/option/syscall.c
        Middlewares/Third_Party/FatFs/src/diskio.c
        Middlewares/Third_Party/FatFs/src/diskio.h
        Middlewares/Third_Party/FatFs/src/ff.c
        Middlewares/Third_Party/FatFs/src/ff.h
        Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
        Middlewares/Third_Party/FatFs/src/ff_gen_drv.h
        Middlewares/Third_Party/FatFs/src/ffconf_template.h
        Middlewares/Third_Party/FatFs/src/integer.h
        Middlewares/Third_Party/Marlin/bitmap_flags.h
        Middlewares/Third_Party/Marlin/blinkm.cpp
        Middlewares/Third_Party/Marlin/blinkm.h
        Middlewares/Third_Party/Marlin/boards.h
        Middlewares/Third_Party/Marlin/buzzer.h
		Middlewares/Third_Party/Marlin/cardreader.cpp
		Middlewares/Third_Party/Marlin/cardreader.h
        Middlewares/Third_Party/Marlin/circularqueue.h
        Middlewares/Third_Party/Marlin/Conditionals.h
        Middlewares/Third_Party/Marlin/Conditionals_LCD.h
        Middlewares/Third_Party/Marlin/Conditionals_post.h
        Middlewares/Third_Party/Marlin/Configuration.h
        Middlewares/Third_Party/Marlin/Configuration_adv.h
        Middlewares/Third_Party/Marlin/configuration_store.cpp
        Middlewares/Third_Party/Marlin/configuration_store.h
        Middlewares/Third_Party/Marlin/dac_mcp4728.cpp
        Middlewares/Third_Party/Marlin/dac_mcp4728.h
        Middlewares/Third_Party/Marlin/digipot_mcp4018.cpp
        Middlewares/Third_Party/Marlin/digipot_mcp4451.cpp
        Middlewares/Third_Party/Marlin/dogm_bitmaps.h
        Middlewares/Third_Party/Marlin/dogm_font_data_6x9_marlin.h
        Middlewares/Third_Party/Marlin/dogm_font_data_HD44780_C.h
        Middlewares/Third_Party/Marlin/dogm_font_data_HD44780_J.h
        Middlewares/Third_Party/Marlin/dogm_font_data_HD44780_W.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_1.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_1_PL.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_1_tr.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_5_Cyrillic.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_CN.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_CZ.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_Greek.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_Kana.h
        Middlewares/Third_Party/Marlin/dogm_font_data_ISO10646_SK.h
        Middlewares/Third_Party/Marlin/dogm_font_data_Marlin_symbols.h
        Middlewares/Third_Party/Marlin/duration_t.h
        Middlewares/Third_Party/Marlin/endstop_interrupts.h
        Middlewares/Third_Party/Marlin/endstops.cpp
        Middlewares/Third_Party/Marlin/endstops.h
        Middlewares/Third_Party/Marlin/enum.h
        Middlewares/Third_Party/Marlin/fastio.h
        Middlewares/Third_Party/Marlin/fastio_1280.h
        Middlewares/Third_Party/Marlin/fastio_1281.h
        Middlewares/Third_Party/Marlin/fastio_168.h
        Middlewares/Third_Party/Marlin/fastio_644.h
        Middlewares/Third_Party/Marlin/fastio_AT90USB.h
        Middlewares/Third_Party/Marlin/G26_Mesh_Validation_Tool.cpp
        Middlewares/Third_Party/Marlin/gcode.cpp
        Middlewares/Third_Party/Marlin/gcode.h
        Middlewares/Third_Party/Marlin/hex_print_routines.cpp
        Middlewares/Third_Party/Marlin/hex_print_routines.h
        Middlewares/Third_Party/Marlin/I2CPositionEncoder.cpp
        Middlewares/Third_Party/Marlin/I2CPositionEncoder.h
        Middlewares/Third_Party/Marlin/language.h
        Middlewares/Third_Party/Marlin/language_an.h
        Middlewares/Third_Party/Marlin/language_bg.h
        Middlewares/Third_Party/Marlin/language_ca.h
        Middlewares/Third_Party/Marlin/language_cn.h
        Middlewares/Third_Party/Marlin/language_cz.h
        Middlewares/Third_Party/Marlin/language_cz_utf8.h
        Middlewares/Third_Party/Marlin/language_da.h
        Middlewares/Third_Party/Marlin/language_de.h
        Middlewares/Third_Party/Marlin/language_el-gr.h
        Middlewares/Third_Party/Marlin/language_el.h
        Middlewares/Third_Party/Marlin/language_en.h
        Middlewares/Third_Party/Marlin/language_es.h
        Middlewares/Third_Party/Marlin/language_eu.h
        Middlewares/Third_Party/Marlin/language_fi.h
        Middlewares/Third_Party/Marlin/language_fr.h
        Middlewares/Third_Party/Marlin/language_fr_utf8.h
        Middlewares/Third_Party/Marlin/language_gl.h
        Middlewares/Third_Party/Marlin/language_hr.h
        Middlewares/Third_Party/Marlin/language_it.h
        Middlewares/Third_Party/Marlin/language_kana.h
        Middlewares/Third_Party/Marlin/language_kana_utf8.h
        Middlewares/Third_Party/Marlin/language_nl.h
        Middlewares/Third_Party/Marlin/language_pl-DOGM.h
        Middlewares/Third_Party/Marlin/language_pl-HD44780.h
        Middlewares/Third_Party/Marlin/language_pl.h
        Middlewares/Third_Party/Marlin/language_pt-br.h
        Middlewares/Third_Party/Marlin/language_pt-br_utf8.h
        Middlewares/Third_Party/Marlin/language_pt.h
        Middlewares/Third_Party/Marlin/language_pt_utf8.h
        Middlewares/Third_Party/Marlin/language_ru.h
        Middlewares/Third_Party/Marlin/language_sk_utf8.h
        Middlewares/Third_Party/Marlin/language_test.h
        Middlewares/Third_Party/Marlin/language_tr.h
        Middlewares/Third_Party/Marlin/language_uk.h
        Middlewares/Third_Party/Marlin/language_zh_CN.h
        Middlewares/Third_Party/Marlin/language_zh_TW.h
        Middlewares/Third_Party/Marlin/least_squares_fit.cpp
        Middlewares/Third_Party/Marlin/least_squares_fit.h
        Middlewares/Third_Party/Marlin/leds.cpp
        Middlewares/Third_Party/Marlin/leds.h
        Middlewares/Third_Party/Marlin/M100_Free_Mem_Chk.cpp
        Middlewares/Third_Party/Marlin/macros.h
        Middlewares/Third_Party/Marlin/Marlin.h
        Middlewares/Third_Party/Marlin/Marlin.ino
        Middlewares/Third_Party/Marlin/Marlin_export.h
        Middlewares/Third_Party/Marlin/Marlin_main.cpp
        Middlewares/Third_Party/Marlin/MarlinConfig.h
        Middlewares/Third_Party/Marlin/MarlinSerial.cpp
        Middlewares/Third_Party/Marlin/MarlinSerial.h
        Middlewares/Third_Party/Marlin/MarlinSPI_nouse.h
        Middlewares/Third_Party/Marlin/Max7219_Debug_LEDs.cpp
        Middlewares/Third_Party/Marlin/Max7219_Debug_LEDs.h
        Middlewares/Third_Party/Marlin/mesh_bed_leveling.cpp
        Middlewares/Third_Party/Marlin/mesh_bed_leveling.h
        Middlewares/Third_Party/Marlin/neopixel.cpp
        Middlewares/Third_Party/Marlin/neopixel.h
        Middlewares/Third_Party/Marlin/nozzle.cpp
        Middlewares/Third_Party/Marlin/nozzle.h
        Middlewares/Third_Party/Marlin/pca9632.cpp
        Middlewares/Third_Party/Marlin/pca9632.h
        Middlewares/Third_Party/Marlin/pins.h
        Middlewares/Third_Party/Marlin/pins_Lite.h
        Middlewares/Third_Party/Marlin/pins_Robin.h
        Middlewares/Third_Party/Marlin/pins_Robin2.h
        Middlewares/Third_Party/Marlin/pins_RobinNano.h
        Middlewares/Third_Party/Marlin/pins_RobinPro.h
        Middlewares/Third_Party/Marlin/pinsDebug.h
        Middlewares/Third_Party/Marlin/pinsDebug_list.h
        Middlewares/Third_Party/Marlin/pinsDebug_plus_70.h
        Middlewares/Third_Party/Marlin/pinsDebug_Teensyduino.h
        Middlewares/Third_Party/Marlin/planner.cpp
        Middlewares/Third_Party/Marlin/planner.h
        Middlewares/Third_Party/Marlin/planner_bezier.cpp
        Middlewares/Third_Party/Marlin/planner_bezier.h
        Middlewares/Third_Party/Marlin/point_t.h
        Middlewares/Third_Party/Marlin/printcounter.cpp
        Middlewares/Third_Party/Marlin/printcounter.h
        Middlewares/Third_Party/Marlin/SanityCheck.h
        Middlewares/Third_Party/Marlin/Sd2Card.cpp
        Middlewares/Third_Party/Marlin/Sd2Card.h
        Middlewares/Third_Party/Marlin/SdBaseFile.cpp
        Middlewares/Third_Party/Marlin/SdBaseFile.h
        Middlewares/Third_Party/Marlin/SdFat.cpp
        Middlewares/Third_Party/Marlin/SdFat.h
        Middlewares/Third_Party/Marlin/SdFatConfig.h
        Middlewares/Third_Party/Marlin/SdFatStructs.h
        Middlewares/Third_Party/Marlin/SdFatUtil.cpp
        Middlewares/Third_Party/Marlin/SdFatUtil.h
        Middlewares/Third_Party/Marlin/SdFile.cpp
        Middlewares/Third_Party/Marlin/SdFile.h
        Middlewares/Third_Party/Marlin/SdInfo.h
        Middlewares/Third_Party/Marlin/SdVolume.cpp
        Middlewares/Third_Party/Marlin/SdVolume.h
        Middlewares/Third_Party/Marlin/serial.cpp
        Middlewares/Third_Party/Marlin/serial.h
        Middlewares/Third_Party/Marlin/servo.cpp
        Middlewares/Third_Party/Marlin/servo.h
        Middlewares/Third_Party/Marlin/softspi.h
        Middlewares/Third_Party/Marlin/speed_lookuptable.h
        Middlewares/Third_Party/Marlin/stepper.cpp
        Middlewares/Third_Party/Marlin/stepper.h
        Middlewares/Third_Party/Marlin/stepper_dac.cpp
        Middlewares/Third_Party/Marlin/stepper_dac.h
        Middlewares/Third_Party/Marlin/stepper_indirection.cpp
        Middlewares/Third_Party/Marlin/stepper_indirection.h
        Middlewares/Third_Party/Marlin/stopwatch.cpp
        Middlewares/Third_Party/Marlin/stopwatch.h
        Middlewares/Third_Party/Marlin/temperature.cpp
        Middlewares/Third_Party/Marlin/temperature.h
        Middlewares/Third_Party/Marlin/thermistornames.h
        Middlewares/Third_Party/Marlin/thermistortable_1.h
        Middlewares/Third_Party/Marlin/thermistortable_10.h
        Middlewares/Third_Party/Marlin/thermistortable_1010.h
        Middlewares/Third_Party/Marlin/thermistortable_1047.h
        Middlewares/Third_Party/Marlin/thermistortable_11.h
        Middlewares/Third_Party/Marlin/thermistortable_110.h
        Middlewares/Third_Party/Marlin/thermistortable_12.h
        Middlewares/Third_Party/Marlin/thermistortable_13.h
        Middlewares/Third_Party/Marlin/thermistortable_147.h
        Middlewares/Third_Party/Marlin/thermistortable_2.h
        Middlewares/Third_Party/Marlin/thermistortable_20.h
        Middlewares/Third_Party/Marlin/thermistortable_3.h
        Middlewares/Third_Party/Marlin/thermistortable_4.h
        Middlewares/Third_Party/Marlin/thermistortable_5.h
        Middlewares/Third_Party/Marlin/thermistortable_51.h
        Middlewares/Third_Party/Marlin/thermistortable_52.h
        Middlewares/Third_Party/Marlin/thermistortable_55.h
        Middlewares/Third_Party/Marlin/thermistortable_6.h
        Middlewares/Third_Party/Marlin/thermistortable_60.h
        Middlewares/Third_Party/Marlin/thermistortable_66.h
        Middlewares/Third_Party/Marlin/thermistortable_7.h
        Middlewares/Third_Party/Marlin/thermistortable_70.h
        Middlewares/Third_Party/Marlin/thermistortable_71.h
        Middlewares/Third_Party/Marlin/thermistortable_75.h
        Middlewares/Third_Party/Marlin/thermistortable_8.h
        Middlewares/Third_Party/Marlin/thermistortable_9.h
        Middlewares/Third_Party/Marlin/thermistortable_998.h
        Middlewares/Third_Party/Marlin/thermistortable_999.h
        Middlewares/Third_Party/Marlin/thermistortables.h
        Middlewares/Third_Party/Marlin/tmc_macros.h
        Middlewares/Third_Party/Marlin/twibus.cpp
        Middlewares/Third_Party/Marlin/twibus.h
        Middlewares/Third_Party/Marlin/types.h
        Middlewares/Third_Party/Marlin/ubl.cpp
        Middlewares/Third_Party/Marlin/ubl.h
        Middlewares/Third_Party/Marlin/ubl_G29.cpp
        Middlewares/Third_Party/Marlin/ubl_motion.cpp
        Middlewares/Third_Party/Marlin/ultralcd.cpp
        Middlewares/Third_Party/Marlin/ultralcd.h
        Middlewares/Third_Party/Marlin/ultralcd_impl_DOGM.h
        Middlewares/Third_Party/Marlin/ultralcd_impl_HD44780.h
        Middlewares/Third_Party/Marlin/ultralcd_st7565_u8glib_VIKI.h
        Middlewares/Third_Party/Marlin/ultralcd_st7920_u8glib_rrd.h
        Middlewares/Third_Party/Marlin/utf_mapper.h
        Middlewares/Third_Party/Marlin/utility.cpp
        Middlewares/Third_Party/Marlin/utility.h
        Middlewares/Third_Party/Marlin/vector_3.cpp
        Middlewares/Third_Party/Marlin/vector_3.h
        Middlewares/Third_Party/Marlin/Version.h
        Middlewares/Third_Party/Marlin/watchdog.cpp
        Middlewares/Third_Party/Marlin/watchdog.h
        Src/adc.c
        Src/bsp_driver_sd.c
        Src/dma.c
        Src/fatfs.c
        Src/fsmc.c
        Src/gpio.c
        Src/gpio_lite.c
        Src/gpio_Robin.c
        Src/gpio_Robin2.c
        Src/gpio_RobinNano.c
        Src/gpio_RobinPro.c
        Src/i2c.c
        Src/ili9320.c
        Src/main.cpp
        Src/mks_cfg.cpp
        Src/mks_fontHz14.c
        Src/mks_reprint.cpp
        Src/mks_touch_screen.c
        Src/pic.c
        Src/pic_manager.cpp
        Src/rtc.c
        Src/sdio.c
        Src/sdio_sdcard.c
        Src/sdio_sdcard.h
        Src/sh_tools.c
        Src/spi.c
        Src/stm32f10x_conf.h
        Src/stm32f1xx_hal_msp.c
        Src/stm32f1xx_it.cpp
        Src/string_deal.c
        Src/tim.c
        Src/usart.c
        Src/usb_host.c
        Src/usbh_conf.c
        Src/wifi_module.cpp
        Src/wifi_upload.cpp
        User/ui/Multi_language/Font24_MS.c
        User/ui/Multi_language/Font47_MS.c
        User/ui/Multi_language/fontHz14.c
        User/ui/Multi_language/fontHz14_tft35.c
        User/ui/Multi_language/Helvetica26.c
        User/ui/Multi_language/Helvetica36.c
        User/ui/Multi_language/lang_common.h
        User/ui/Multi_language/lang_ru.c
        User/ui/Multi_language/lang_std.c
        User/ui/Multi_language/mks_fontHz14.c
        User/ui/QRENCODE/bitstream.c
        User/ui/QRENCODE/bitstream.h
        User/ui/QRENCODE/mask.c
        User/ui/QRENCODE/mask.h
        User/ui/QRENCODE/mmask.c
        User/ui/QRENCODE/mmask.h
        User/ui/QRENCODE/mqrspec.c
        User/ui/QRENCODE/mqrspec.h
        User/ui/QRENCODE/QR_Encode.c
        User/ui/QRENCODE/QR_Encode.h
        User/ui/QRENCODE/qrencode.c
        User/ui/QRENCODE/qrencode.h
        User/ui/QRENCODE/qrinput.c
        User/ui/QRENCODE/qrinput.h
        User/ui/QRENCODE/qrspec.c
        User/ui/QRENCODE/qrspec.h
        User/ui/QRENCODE/rscode.c
        User/ui/QRENCODE/rscode.h
        User/ui/QRENCODE/split.c
        User/ui/QRENCODE/split.h
        User/ui/widgets/config/AdvancedConfigUI.cpp
        User/ui/widgets/config/AdvancedConfigUI.h
        User/ui/widgets/config/ConfigurationWidget.cpp
        User/ui/widgets/config/ConfigurationWidget.h
        User/ui/widgets/config/MotorDirConfigUI.cpp
		User/ui/widgets/config/MotorDirConfigUI.h
		User/ui/widgets/config/LanguageConfigUI.cpp
		User/ui/widgets/config/LanguageConfigUI.h
		User/ui/widgets/config/MachineConfigurationUI.cpp
		User/ui/widgets/config/MachineConfigurationUI.h
		User/ui/widgets/config/FilamentChangeConfigUI.h
		User/ui/widgets/config/FilamentChangeConfigUI.cpp
		User/ui/widgets/config/HomeConfigUI.cpp
		User/ui/widgets/config/SensorLevelConfigUI.h
		User/ui/widgets/config/SensorLevelConfigUI.cpp
		User/ui/widgets/config/HomeConfigUI.h
		User/ui/widgets/config/MachineTypeConfigUI.cpp
		User/ui/widgets/config/MachineTypeConfigUI.h
		User/ui/widgets/config/HomeConfigUI.h
		User/ui/widgets/config/LevelingConfigUI.cpp
		User/ui/widgets/config/LevelingConfigUI.h
		User/ui/widgets/config/HotBedConfigUI.cpp
		User/ui/widgets/config/HotBedConfigUI.h
		User/ui/widgets/config/NozzleConfigUI.cpp
		User/ui/widgets/config/NozzleConfigUI.h
		User/ui/widgets/config/MotorSettingsUI.cpp
		User/ui/widgets/config/MotorSettingsUI.h
        User/ui/widgets/dialog/AboutDialogUI.cpp
        User/ui/widgets/dialog/AboutDialogUI.h
        User/ui/widgets/dialog/ConfirmDialogUI.cpp
        User/ui/widgets/dialog/ConfirmDialogUI.h
        User/ui/widgets/dialog/DialogWidget.cpp
        User/ui/widgets/dialog/DialogWidget.h
		User/ui/widgets/dialog/PrintingInfoDialogUI.cpp
		User/ui/widgets/dialog/PrintingInfoDialogUI.h
		User/ui/widgets/dialog/CalculatorDialogUI.cpp
		User/ui/widgets/dialog/CalculatorDialogUI.h
		User/ui/widgets/dialog/WifiWaitInitDialogUI.cpp
		User/ui/widgets/dialog/WifiWaitInitDialogUI.h
		User/ui/widgets/dialog/KeyboardUI.cpp
		User/ui/widgets/dialog/KeyboardUI.h
		User/ui/widgets/dialog/ProgressDialogUI.cpp
		User/ui/widgets/dialog/ProgressDialogUI.h
		User/ui/widgets/WifiListUI.cpp
		User/ui/widgets/WifiListUI.h
        User/ui/widgets/Application.cpp
        User/ui/widgets/Application.h
        User/ui/widgets/BabystepUI.cpp
        User/ui/widgets/BabystepUI.h
        User/ui/widgets/backui.cpp
        User/ui/widgets/backui.h
        User/ui/widgets/FanUI.cpp
        User/ui/widgets/FanUI.h
        User/ui/widgets/FilamentUI.cpp
        User/ui/widgets/FilamentUI.h
        User/ui/widgets/FileBrowserUI.cpp
        User/ui/widgets/FileBrowserUI.h
        User/ui/widgets/FileInfoBaseUI.cpp
        User/ui/widgets/FileInfoBaseUI.h
        User/ui/widgets/FileInfoUI.cpp
        User/ui/widgets/FileInfoUI.h
        User/ui/widgets/HomeUI.cpp
        User/ui/widgets/HomeUI.h
        User/ui/widgets/integration.cpp
        User/ui/widgets/integration.h
        User/ui/widgets/MainUI.cpp
        User/ui/widgets/MainUI.h
		User/ui/widgets/ManualLevelingUI.cpp
		User/ui/widgets/ManualLevelingUI.h
        User/ui/widgets/MoreUI.cpp
        User/ui/widgets/MoreUI.h
        User/ui/widgets/MotorMoveUI.cpp
        User/ui/widgets/MotorMoveUI.h
        User/ui/widgets/PreheatUI.cpp
        User/ui/widgets/PreheatUI.h
        User/ui/widgets/PrintingToolsUI.cpp
        User/ui/widgets/PrintingToolsUI.h
        User/ui/widgets/PrintingUI.cpp
        User/ui/widgets/PrintingUI.h
        User/ui/widgets/SettingsUI.cpp
        User/ui/widgets/SettingsUI.h
        User/ui/widgets/SpeedUI.cpp
        User/ui/widgets/SpeedUI.h
        User/ui/widgets/StdWidget.cpp
        User/ui/widgets/StdWidget.h
        User/ui/widgets/ToolsUI.cpp
        User/ui/widgets/ToolsUI.h
        User/ui/widgets/UI.h
        User/ui/widgets/Widget.cpp
        User/ui/widgets/Widget.h
		User/ui/widgets/XyzUI.cpp
		User/ui/widgets/XyzUI.h
		User/ui/widgets/WifiUI.cpp
		User/ui/widgets/WifiUI.h
		User/ui/widgets/MeshLevelingUI.h
		User/ui/widgets/MeshLevelingUI.cpp
        User/ui/draw_ui.cpp
        User/ui/draw_ui.h
        User/ui/font.h
        User/ui/ui_tools.cpp
        User/ui/ui_tools.h
		Src/EspParser.cpp Src/EspParser.h User/ui/widgets/PIDSettingsUI.cpp User/ui/widgets/PIDSettingsUI.h User/ui/widgets/dialog/PowerOffDialogUI.cpp User/ui/widgets/dialog/PowerOffDialogUI.h User/ui/widgets/config/PowerControlUI.cpp User/ui/widgets/config/PowerControlUI.h)

add_compile_definitions(USE_HAL_DRIVER)
add_compile_definitions(STM32F103xE)
add_compile_definitions(STM32F10X_HD)
add_compile_definitions(USE_HAL_LIB)
add_compile_definitions(MKS_ROBIN_NANO)
add_compile_definitions(TFT35)

